--- a/index.html
+++ b/index.html
@@ -71,26 +71,27 @@
 
     <main id="content">
         <section id="home">
-            <div>
+            <div class="cta">
                 <h1 class="title">Manaus <span>Pizza</span></h1>
                 <p class="description">Gama completa de pizzas italianas, hambúrgueres no nosso restaurante a um preço especial</p>
                 <button id="ctaButtons">
                     <a href="#" class="btnDefault">Peça Agora</a>
                 </button>
-                <ul>
-                    <li>
-                        <a href="">I</a>
-                    </li>
-                    <li>
-                        <a href="">F</a>
-                    </li>
-                    <li>
-                        <a href="">T</a>
-                    </li>
-                    <li>
-                        <a href="">Y</a>
-                    </li>
-                </ul>
+
+                <div class="socialMediaButtons">
+                    <a href="#">
+                        <i class="fa-brands fa-whatsapp"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                    <a href="#">
+                        <i class="fa-brands fa-youtube"></i>
+                    </a>
+                </div>
             </div>
         </section>
     </main>
