--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="src/styles/styles.css">
     <link rel="stylesheet" href="src/styles/header.css">
     <link rel="stylesheet" href="src/styles/home.css">
+    <link rel="stylesheet" href="src/styles/delivery.css">
 
     <title>Restaurante Landing Page</title>
 </head>
@@ -93,6 +94,40 @@
                     </a>
                 </div>
             </div>
+        </section>
+
+        <section id="delivery">
+            <h2 class="subtitle">Delivery</h2>
+
+            <ul id="servicesList">
+                <li class="servicesItem">
+                    <i class="fa-solid fa-basket-shopping"></i>
+                    <h3>Pedido</h3>
+
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugiat nisi iure perferendis. </p>
+                </li>
+
+                <li class="servicesItem">
+                    <i class="fa-solid fa-credit-card"></i>
+                    <h3>Pagamento</h3>
+
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Esse quaerat nam similique ea. </p>
+                </li>
+
+                <li class="servicesItem">
+                    <i class="fa-solid fa-truck"></i>
+                    <h3>Delivery</h3>
+
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Pariatur animi qui veritatis.</p>
+                </li>
+
+                <li class="servicesItem">
+                    <i class="fa-solid fa-boxes-packing"></i>
+                    <h3>Embalagem</h3>
+
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consequuntur sequi culpa amet quasi cupiditate deserunt minima fugit autem.</p>
+                </li>
+            </ul>
         </section>
     </main>
 
