--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
             <h2 class="subtitle">Cardápio</h2>
 
             <ul id="menuOptions">
-                <li class="menuItem active">Pizza</li>
-                <li class="menuItem">Grelha</li>
-                <li class="menuItem">Salada</li>
-                <li class="menuItem">Doce</li>
+                <li class="menuItem active" id="pizza">Pizza</li>
+                <li class="menuItem" id="grill">Grelha</li>
+                <li class="menuItem" id="salad">Salada</li>
+                <li class="menuItem" id="sweet">Doce</li>
             </ul>
 
             <div class="menuContainer" id="menuContainer">
@@ -153,7 +153,9 @@
                             </i>
                             <i class="fa-regular fa-heart"></i>
                         </div>
-                        <i class="fa-solid fa-star"> 4,5</i>
+                        <i class="fa-solid fa-star"> 
+                            <span>4,5</span>
+                        </i>
                     </div>
 
                     <div class="descriptionCard">
@@ -176,7 +178,9 @@
                             </i>
                             <i class="fa-regular fa-heart"></i>
                         </div>
-                        <i class="fa-solid fa-star"> 4,5</i>
+                        <i class="fa-solid fa-star"> 
+                            <span>4,5</span>
+                        </i>
                     </div>
 
                     <div class="descriptionCard">
@@ -199,7 +203,9 @@
                             </i>
                             <i class="fa-regular fa-heart"></i>
                         </div>
-                        <i class="fa-solid fa-star"> 4,5</i>
+                        <i class="fa-solid fa-star"> 
+                            <span>4,5</span>
+                        </i>
                     </div>
 
                     <div class="descriptionCard">
@@ -222,7 +228,9 @@
                             </i>
                             <i class="fa-regular fa-heart"></i>
                         </div>
-                        <i class="fa-solid fa-star"> 4,5</i>
+                        <i class="fa-solid fa-star"> 
+                            <span>4,5</span>
+                        </i>
                     </div>
 
                     <div class="descriptionCard">
@@ -245,7 +253,9 @@
                             </i>
                             <i class="fa-regular fa-heart"></i>
                         </div>
-                        <i class="fa-solid fa-star"> 4,5</i>
+                        <i class="fa-solid fa-star"> 
+                            <span>4,5</span>
+                        </i>
                     </div>
 
                     <div class="descriptionCard">
@@ -268,7 +278,9 @@
                             </i>
                             <i class="fa-regular fa-heart"></i>
                         </div>
-                        <i class="fa-solid fa-star"> 4,5</i>
+                        <i class="fa-solid fa-star"> 
+                            <span>4,5</span>
+                        </i>
                     </div>
 
                     <div class="descriptionCard">
@@ -291,7 +303,9 @@
                             </i>
                             <i class="fa-regular fa-heart"></i>
                         </div>
-                        <i class="fa-solid fa-star"> 4,5</i>
+                        <i class="fa-solid fa-star"> 
+                            <span>4,5</span>
+                        </i>
                     </div>
 
                     <div class="descriptionCard">
@@ -314,7 +328,9 @@
                             </i>
                             <i class="fa-regular fa-heart"></i>
                         </div>
-                        <i class="fa-solid fa-star"> 4,5</i>
+                        <i class="fa-solid fa-star"> 
+                            <span>4,5</span>
+                        </i>
                     </div>
 
                     <div class="descriptionCard">
