card vindo do js

--- a/index.html
+++ b/index.html
@@ -137,215 +137,16 @@
             <h2 class="subtitle">Cardápio</h2>
 
             <ul id="menuOptions">
-                <li class="menuItem active" id="pizza">Pizza</li>
-                <li class="menuItem" id="grill">Grelha</li>
-                <li class="menuItem" id="salad">Salada</li>
-                <li class="menuItem" id="sweet">Doce</li>
+                <li class="menuItem active" id="pizzas">Pizza</li>
+                <li class="menuItem" id="grids">Grelha</li>
+                <li class="menuItem" id="salads">Salada</li>
+                <li class="menuItem" id="sweets">Doce</li>
             </ul>
 
             <div class="menuContainer" id="menuContainer">
-
-                <div class="menuCard">
-                    <div class="imageCard">
-                        <div class="informationCard">
-                            <i class="fa-regular fa-clock"> 
-                                <span>37min</span>
-                            </i>
-                            <i class="fa-regular fa-heart"></i>
-                        </div>
-                        <i class="fa-solid fa-star"> 
-                            <span>4,5</span>
-                        </i>
-                    </div>
-
-                    <div class="descriptionCard">
-                        <div class="nameCard">
-                            <h4>Pizza Italiana</h4>
-                            <p>R$49,99</p>
-                        </div>
-
-                        <button class="btnCard">
-                            <a href="">Peça Agora</a>
-                        </button>
-                    </div>
-                </div>
-
-                <div class="menuCard">
-                    <div class="imageCard">
-                        <div class="informationCard">
-                            <i class="fa-regular fa-clock"> 
-                                <span>37min</span>
-                            </i>
-                            <i class="fa-regular fa-heart"></i>
-                        </div>
-                        <i class="fa-solid fa-star"> 
-                            <span>4,5</span>
-                        </i>
-                    </div>
-
-                    <div class="descriptionCard">
-                        <div class="nameCard">
-                            <h4>Pizza Italiana</h4>
-                            <p>R$49,99</p>
-                        </div>
-
-                        <button class="btnCard">
-                            <a href="">Peça Agora</a>
-                        </button>
-                    </div>
-                </div>
-
-                <div class="menuCard">
-                    <div class="imageCard">
-                        <div class="informationCard">
-                            <i class="fa-regular fa-clock"> 
-                                <span>37min</span>
-                            </i>
-                            <i class="fa-regular fa-heart"></i>
-                        </div>
-                        <i class="fa-solid fa-star"> 
-                            <span>4,5</span>
-                        </i>
-                    </div>
-
-                    <div class="descriptionCard">
-                        <div class="nameCard">
-                            <h4>Pizza Italiana</h4>
-                            <p>R$49,99</p>
-                        </div>
-
-                        <button class="btnCard">
-                            <a href="">Peça Agora</a>
-                        </button>
-                    </div>
-                </div>
-
-                <div class="menuCard">
-                    <div class="imageCard">
-                        <div class="informationCard">
-                            <i class="fa-regular fa-clock"> 
-                                <span>37min</span>
-                            </i>
-                            <i class="fa-regular fa-heart"></i>
-                        </div>
-                        <i class="fa-solid fa-star"> 
-                            <span>4,5</span>
-                        </i>
-                    </div>
-
-                    <div class="descriptionCard">
-                        <div class="nameCard">
-                            <h4>Pizza Italiana</h4>
-                            <p>R$49,99</p>
-                        </div>
-
-                        <button class="btnCard">
-                            <a href="">Peça Agora</a>
-                        </button>
-                    </div>
-                </div>
-
-                <div class="menuCard">
-                    <div class="imageCard">
-                        <div class="informationCard">
-                            <i class="fa-regular fa-clock"> 
-                                <span>37min</span>
-                            </i>
-                            <i class="fa-regular fa-heart"></i>
-                        </div>
-                        <i class="fa-solid fa-star"> 
-                            <span>4,5</span>
-                        </i>
-                    </div>
-
-                    <div class="descriptionCard">
-                        <div class="nameCard">
-                            <h4>Pizza Italiana</h4>
-                            <p>R$49,99</p>
-                        </div>
-
-                        <button class="btnCard">
-                            <a href="">Peça Agora</a>
-                        </button>
-                    </div>
-                </div>
-
-                <div class="menuCard">
-                    <div class="imageCard">
-                        <div class="informationCard">
-                            <i class="fa-regular fa-clock"> 
-                                <span>37min</span>
-                            </i>
-                            <i class="fa-regular fa-heart"></i>
-                        </div>
-                        <i class="fa-solid fa-star"> 
-                            <span>4,5</span>
-                        </i>
-                    </div>
-
-                    <div class="descriptionCard">
-                        <div class="nameCard">
-                            <h4>Pizza Italiana</h4>
-                            <p>R$49,99</p>
-                        </div>
-
-                        <button class="btnCard">
-                            <a href="">Peça Agora</a>
-                        </button>
-                    </div>
-                </div>
-
-                <div class="menuCard">
-                    <div class="imageCard">
-                        <div class="informationCard">
-                            <i class="fa-regular fa-clock"> 
-                                <span>37min</span>
-                            </i>
-                            <i class="fa-regular fa-heart"></i>
-                        </div>
-                        <i class="fa-solid fa-star"> 
-                            <span>4,5</span>
-                        </i>
-                    </div>
-
-                    <div class="descriptionCard">
-                        <div class="nameCard">
-                            <h4>Pizza Italiana</h4>
-                            <p>R$49,99</p>
-                        </div>
-
-                        <button class="btnCard">
-                            <a href="">Peça Agora</a>
-                        </button>
-                    </div>
-                </div>
-
-                <div class="menuCard">
-                    <div class="imageCard">
-                        <div class="informationCard">
-                            <i class="fa-regular fa-clock"> 
-                                <span>37min</span>
-                            </i>
-                            <i class="fa-regular fa-heart"></i>
-                        </div>
-                        <i class="fa-solid fa-star"> 
-                            <span>4,5</span>
-                        </i>
-                    </div>
-
-                    <div class="descriptionCard">
-                        <div class="nameCard">
-                            <h4>Pizza Italiana</h4>
-                            <p>R$49,99</p>
-                        </div>
-
-                        <button class="btnCard">
-                            <a href="">Peça Agora</a>
-                        </button>
-                    </div>
-                </div>
                 
             </div>
+
         </section>
     </main>
 
