created section location

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="src/styles/home.css">
     <link rel="stylesheet" href="src/styles/delivery.css">
     <link rel="stylesheet" href="src/styles/menu.css">
+    <link rel="stylesheet" href="src/styles/location.css">
 
     <link rel="shortcut icon" href="src/images/pizzaFavicon.jpeg" type="image/x-icon">
     <title>Pizzaria Landing Page</title>
@@ -146,6 +147,45 @@
             <div class="menuContainer" id="menuContainer">
                 
             </div>
+
+        </section>
+
+        <section id="location">
+            <aside>
+                <div id="textReview">
+                    <i class="fa-regular fa-comments"></i>
+
+                    <p id="contentTextReview">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis alias voluptate voluptatem? Optio laboriosam veritatis maiores corrupti inventore. Non nesciunt saepe at veritatis corporis laudantium aliquam vero similique tenetur quasi!
+                    </p>
+
+                    <p id="authorRextReview"><span>Nome do Autor</span> | Título da opinião</p>
+                </div>
+
+                <div id="imageReview">
+                    <img src="src/images/pancakeBackground.jpeg" alt="Panqueca">
+
+                    <div id="requestCard">
+                        <div id="headCard">
+                            <p>Pedido</p>
+                            <p>R$49,99</p>
+                        </div>
+
+                        <i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i>
+
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga unde assumenda repellendus iste dolorum nisi quidem sint molestias?
+                        </p>
+
+                        <button>Peça Agora <i class="fa-solid fa-arrow-right-long"></i></button>
+                    </div>
+                </div>
+            </aside>
+            
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15935.466219724281!2d-60.037510305091075!3d-3.1299541473935117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x926c057ce933b653%3A0x20b37a429be35a67!2sPizzaria%20Splash%20Pizza%20-%20Centro!5e0!3m2!1spt-BR!2sbr!4v1735017360701!5m2!1spt-BR!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </section>
+
+        <section id="contact">
 
         </section>
     </main>
