--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     <label for="idAccept">Eu concordo com os termos e condições desse artigo</label>
                 </div>
 
-                <button class="btnDefault">Envie sua mensagem</button>
+                <button class="btnDefault" type="button">Envie sua mensagem</button>
             </form>
         </section>
     </main>
