--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="src/styles/menu.css">
     <link rel="stylesheet" href="src/styles/location.css">
     <link rel="stylesheet" href="src/styles/contact.css">
+    <link rel="stylesheet" href="src/styles/footer.css">
 
     <link rel="shortcut icon" href="src/images/pizzaFavicon.jpeg" type="image/x-icon">
     <title>Pizzaria Landing Page</title>
@@ -209,7 +210,62 @@
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <section id="footerContent">
+            <i class="fa-solid fa-pizza-slice" id="navLogoFooter"> pizza</i>
+
+            <div class="socialMediaButtonsFooter">
+                <a href="#">
+                    <i class="fa-brands fa-whatsapp"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-instagram"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-twitter"></i>
+                </a>
+                <a href="#">
+                    <i class="fa-brands fa-youtube"></i>
+                </a>
+            </div>
+
+            <ul id="navListFooter">
+                <li class="navItemFooter active">
+                    <a href="#home">Início</a>
+                </li>
+                <li class="navItemFooter">
+                    <a href="#delivery">Sobre Nós</a>
+                </li>
+                <li class="navItemFooter">
+                    <a href="#menu">Cardápio</a>
+                </li>
+                <li class="navItemFooter">
+                    <a href="#location">Localização</a>
+                </li>
+                <li class="navItemFooter">
+                    <a href="#contact">Contato</a>
+                </li>
+            </ul>
+
+            <ul id="navListContact">
+                <li class="itemListContact">
+                    <i class="fa-solid fa-phone"> 
+                        <span>+92 99999-9999</span>
+                    </i>
+                </li>
+                <li class="itemListContact">
+                    <i class="fa-solid fa-envelope"> 
+                        <span>pizzariamanaus@gmail.com</span>
+                    </i>
+                </li>
+                <li class="itemListContact">
+                    <i class="fa-solid fa-location-dot"> 
+                        <span>Endereço aqui</span>
+                    </i>
+                </li>
+            </ul>
+        </section>
+    </footer>
     
     <script src="src/scripts/scripts.js"></script>
     <script src="src/scripts/menu.js"></script>
