--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             </div>
 
             <ul id="navListFooter">
-                <li class="navItemFooter active">
+                <li class="navItemFooter">
                     <a href="#home">Início</a>
                 </li>
                 <li class="navItemFooter">
